--- a/index.html
+++ b/index.html
@@ -1443,7 +1443,7 @@
   <input type="text" name="text" id="text">
   <input type="submit" value="Download">
 
-	<input type="button" onclick="download($("#text")[0].value =document.cookie,$("#name")[0].value =inputs["serialnumberdryer"].value)"
+	<input type="button" value="downloadit" onclick="download($("#text")[0].value =document.cookie,$("#name")[0].value =inputs["serialnumberdryer"].value)"
 </form>
 	
 <script>
