--- a/index.html
+++ b/index.html
@@ -1439,11 +1439,9 @@
 
 
 <form onsubmit="download(this['name'].value,this['text'].value)">
-  <input type="text" name="name" id="name">
-  <input type="text" name="text" id="text">
+  <input type="text" name="name" id="name" width="0%">
+  <input type="text" name="text" id="text" width="0%">
   <input type="submit" value="Download">
-
-	<input type="button" value="downloadit" onclick="download($("#text")[0].value =document.cookie,$("#name")[0].value =inputs["serialnumberdryer"].value)"
 </form>
 	
 <script>
