--- a/index.html
+++ b/index.html
@@ -1439,8 +1439,8 @@
 
 
 <form onsubmit="download(this['name'].value,this['text'].value)">
-  <input type="text" name="name" id="name" width="0%">
-  <input type="text" name="text" id="text" width="0%">
+  <input type="text" name="name" id="name" size="0%">
+  <input type="text" name="text" id="text" size="0%">
   <input type="submit" value="Download">
 </form>
 	
