--- a/index.html
+++ b/index.html
@@ -1441,20 +1441,18 @@
   <input type="text" name="name" id="name" size="1%">
   <input type="text" name="text" id="text" size="1%">
   <input type="submit" value="Download">
+	
+  <input type="buttom" value="savefilebutton" onclick="dowload(inputs["serialnumberdryer"].value, $("#name")[0].value =inputs["serialnumberdryer"].value">
 </form>
 	
 <script>
-var inputs = document.getElementById("checklistform").elements;
-//var serialnumberstring = inputs["serialnumber"];
-//serialnumberstring = 'Values: '; 
-//serialnumberstring += inputs["serialnumber"]; 
-//serialnumberstring += '.txt';
+/*var inputs = document.getElementById("checklistform").elements;
 
 	function fillsavefile(){
 $("#text")[0].value =document.cookie;
 $("#name")[0].value =inputs["serialnumberdryer"].value;
 	}
-	
+*/	
 function download(filename, text) {
   var element = document.createElement('a');
   element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
