--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
   <input type="text" name="text" id="text" size="1%">
   <input type="submit" value="Download">
 	
-  <input type="buttom" value="savefilebutton" onclick="dowload(inputs["serialnumberdryer"].value, $("#name")[0].value =inputs["serialnumberdryer"].value">
+  <input type="button" value="savefilebutton" onclick="dowload(inputs["serialnumberdryer"].value, $("#name")[0].value =inputs["serialnumberdryer"].value">
 </form>
 	
 <script>
