--- a/index.html
+++ b/index.html
@@ -1442,12 +1442,12 @@
   <input type="text" name="text" id="text" size="1%">
   <input type="submit" value="Download">
 	
-  <input type="button" value="savefilebutton" onclick="dowload(inputs["serialnumberdryer"].value, $("#name")[0].value =inputs["serialnumberdryer"].value">
+  <input type="button" value="savefilebutton" onclick="dowload(inputs["serialnumberdryer"].value,document.cookie">
 </form>
 	
 <script>
-/*var inputs = document.getElementById("checklistform").elements;
-
+var inputs = document.getElementById("checklistform").elements;
+/*
 	function fillsavefile(){
 $("#text")[0].value =document.cookie;
 $("#name")[0].value =inputs["serialnumberdryer"].value;
