--- a/index.html
+++ b/index.html
@@ -1442,7 +1442,7 @@
   <input type="text" name="text" id="text" size="1%">
   <input type="submit" value="Download">
 	
-  <input type="button" value="savefilebutton" onclick="dowload(inputs["serialnumberdryer"].value, document.cookie)">
+  <input type="button" value="savefilebutton" onclick="download(inputs["serialnumberdryer"].value, document.cookie)">
 </form>
 	
 <script>
