--- a/index.html
+++ b/index.html
@@ -1438,9 +1438,9 @@
 </form>
 
 <form onsubmit="download(this['name'].value,this['text'].value)">
-  <input type="text" name="name" id="name" size="1%">
-  <input type="text" name="text" id="text" size="1%">
-  <input type="submit" value="Download">
+  //<input type="text" name="name" id="name" size="1%">
+  //<input type="text" name="text" id="text" size="1%">
+  //<input type="submit" value="Download">
 	
   <input type="button" value="savefilebutton" onclick="download();">
 </form>
@@ -1455,7 +1455,7 @@ var inputs = document.getElementById("checklistform").elements;
 	
 function download(filename, text) {
   var filename= inputs["serialnumberdryer"].value;
-  var text="document.cookie";
+  var text=document.cookie;
   var element = document.createElement('a');
   element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
   element.setAttribute('download', filename);
