--- a/index.html
+++ b/index.html
@@ -1438,9 +1438,9 @@
 </form>
 
 <form onsubmit="download(this['name'].value,this['text'].value)">
-  //<input type="text" name="name" id="name" size="1%">
-  //<input type="text" name="text" id="text" size="1%">
-  //<input type="submit" value="Download">
+  <!--<input type="text" name="name" id="name" size="1%">
+  <input type="text" name="text" id="text" size="1%">
+  <input type="submit" value="Download">-->
 	
   <input type="button" value="savefilebutton" onclick="download();">
 </form>
