--- a/index.html
+++ b/index.html
@@ -1435,15 +1435,14 @@
 <br>
 	
 </div>
+	<input type="button" value="savefilebutton" onclick="download();">
 </form>
 
-<form onsubmit="download(this['name'].value,this['text'].value)">
-  <!--<input type="text" name="name" id="name" size="1%">
+<!--<form onsubmit="download(this['name'].value,this['text'].value)">
+  <input type="text" name="name" id="name" size="1%">
   <input type="text" name="text" id="text" size="1%">
-  <input type="submit" value="Download">-->
-	
-  <input type="button" value="savefilebutton" onclick="download();">
-</form>
+  <input type="submit" value="Download">
+</form>-->
 	
 <script>
 var inputs = document.getElementById("checklistform").elements;
