--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@
 <br>
 	
 </div>
-	<center><input type="button" value="savefilebutton" onclick="download();"></center>
+	<center><input type="button" class="button-cookie" style="width:97%" value="savefilebutton" onclick="download();"></center>
 </form>
 	
 <script>
