--- a/index.html
+++ b/index.html
@@ -1621,9 +1621,10 @@ button,
   line-height: 1.2;
   white-space: nowrap;
   text-decoration: none;
-  padding: 15px 20px;
+  padding: 15px 0px;
   margin: 0;
   cursor: pointer;
+	top: 5px;
 }
 
 input[type=checkbox]
