--- a/index.html
+++ b/index.html
@@ -1433,8 +1433,13 @@
 <input type="button" class="button-cookie" style="width:32.3%" value="Recover" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
 </center>
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
+	
+<label for="input-file">Choose a File to Load</label>
+<input type="file" id="input-file" class="btn-file-upload" style="width:97.5%">
+	
 </form>
 </div>
+	
 <script>
 var inputs = document.getElementById("checklistform").elements;
 	
@@ -1447,9 +1452,7 @@ function download(filename, text) {
   
   element.style.display = 'none';
   document.body.appendChild(element);
-
   element.click();
-
   document.body.removeChild(element);
 }
 
@@ -1478,7 +1481,7 @@ function img_pathUrlg(input){
         $('#img_urlg')[0].src = (window.URL ? URL : webkitURL).createObjectURL(input.files[0]);
     }
 function img_pathUrlh(input){
-        $('#img_urlh')[0].src = (window.URL ? URL : webkitURL).createObjectURL(input.files[0]);
+	$('#img_urlh')[0].src = (window.URL ? URL : webkitURL).createObjectURL(input.files[0]);
     }
 </script>
 
@@ -1488,70 +1491,57 @@ function img_pathUrlh(input){
   width:24%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urla {
   background: #ddd;
   width:24%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urlb {
   background: #ddd;
   width:24%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urlc {
   background: #ddd;
   width:24%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urld {
   background: #ddd;
   width:19%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urle {
   background: #ddd;
   width:19%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urlf {
   background: #ddd;
   width:19%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urlg {
   background: #ddd;
   width:19%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 #img_urlh {
   background: #ddd;
   width:19%;
   height: ;
   border-radius:2px;
-  display: inline;
-}
+  display: inline;}
 
-textarea {
-width:97%;
-}
-
-
+textarea {width:97%;}
 
 hr {
  height:4px;
@@ -1559,8 +1549,7 @@ hr {
  background-color: rgba(252,181,72,1) ;
  border: 3px #000000;
  border-radius: 5px;
-}
-
+	}
 h1 {
  color: rgba(21,84,131,1);
  font-size: 240%;
@@ -1571,18 +1560,12 @@ b {
  color: rgba(21,84,131,1);
  font-size: 130%;
 }
+	
+body {font: normal 90% Calibri, Candara, Segoe;}
 
-body {
- font: normal 90% Calibri, Candara, Segoe;
-}
+p {font-size: 100%}
 
-p {
- font-size: 100%
-}
-
-textarea{
-resize: vertical;
-}
+textarea{resize: vertical;}
 
 .btn-file-upload{
      width: 100%;
@@ -1627,8 +1610,7 @@ button,
   margin-top: 3px;
 }
 
-input[type=checkbox]
-{
+input[type=checkbox]{
     background-color: #DDD;
     border-radius: 2px;
     appearance: none;
@@ -1650,6 +1632,34 @@ input[type=checkbox]:checked
 </style>
 
 <script>
+document.getElementById('input-file')
+  .addEventListener('change', getFile)
+
+function getFile(event) {
+	const input = event.target
+  if ('files' in input && input.files.length > 0) {
+	  placeFileContent(
+      document.getElementById('content-target'),
+      input.files[0])
+  }
+}
+
+function placeFileContent(target, file) {
+	readFileContent(file).then(content => {
+  	target.value = content
+  }).catch(error => console.log(error))
+}
+
+function readFileContent(file) {
+	const reader = new FileReader()
+  return new Promise((resolve, reject) => {
+    reader.onload = event => resolve(event.target.result)
+    reader.onerror = error => reject(error)
+    reader.readAsText(file)
+  })
+}
+	
+	
 function retrieveCookie( cookieName ) {
 	/* retrieved in the format
 	cookieName4=value; cookieName3=value; cookieName2=value; cookieName1=value
