--- a/index.html
+++ b/index.html
@@ -1434,8 +1434,7 @@
 </center>
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
 	
-<label for="input-file">Choose a File to Load</label>
-<input type="file" id="input-file" class="btn-file-upload" style="width:97.5%">
+<input type="file" id="input-file" class="btn-file-upload" value="Choose a File to Load" style="width:97.5%">
 	
 </form>
 </div>
