--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,7 @@
 </center>
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
 	
-<center><input type="file" id="input-file" class="btn-file-upload" value="Choose a File to Load" style="width:97.5%; margin-top:3px;" onChange="recoverInputs(this.form,retrieveCookie('content-target'),true);"></center>
+<center><input type="file" id="input-file" class="btn-file-upload" value="Choose a File to Load" style="width:97.5%; margin-top:3px;" onChange="recoverInputs(this.form,content-target,true);"></center>
 	
 </form>
 </div>
