--- a/index.html
+++ b/index.html
@@ -1434,12 +1434,39 @@
 </center>
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
 	
-<center><input type="file" id="input-file" class="btn-file-upload" value="Choose a File to Load" style="width:97.5%; margin-top:3px;" onChange="recoverInputs(this.form,content-target,true);"></center>
+<center><input type="file" id="input-file" class="btn-file-upload" value="Choose a File to Load" style="width:97.5%; margin-top:3px;" onChange="recoverInputs(this.form,datastring,true);"></center>
 	
 </form>
 </div>
 	
 <script>
+document.getElementById('input-file')
+  .addEventListener('change', getFile)
+
+function getFile(event) {
+	var datastring;
+	const input = event.target
+  if ('files' in input && input.files.length > 0) {
+	  placeFileContent(datastring,input.files[0])
+	  
+  }
+}
+
+function placeFileContent(target, file) {
+	readFileContent(file).then(content => {
+  	target.value = content
+  }).catch(error => console.log(error))
+}
+
+function readFileContent(file) {
+	const reader = new FileReader()
+  return new Promise((resolve, reject) => {
+    reader.onload = event => resolve(event.target.result)
+    reader.onerror = error => reject(error)
+    reader.readAsText(file)
+  })
+}	
+	
 var inputs = document.getElementById("checklistform").elements;
 	
 function download(filename, text) {
@@ -1630,34 +1657,7 @@ input[type=checkbox]:checked
 		
 </style>
 
-<script>
-document.getElementById('input-file')
-  .addEventListener('change', getFile)
-
-function getFile(event) {
-	const input = event.target
-  if ('files' in input && input.files.length > 0) {
-	  placeFileContent(
-      document.getElementById('content-target'),
-      input.files[0])
-  }
-}
-
-function placeFileContent(target, file) {
-	readFileContent(file).then(content => {
-  	target.value = content
-  }).catch(error => console.log(error))
-}
-
-function readFileContent(file) {
-	const reader = new FileReader()
-  return new Promise((resolve, reject) => {
-    reader.onload = event => resolve(event.target.result)
-    reader.onerror = error => reject(error)
-    reader.readAsText(file)
-  })
-}
-	
+<script>	
 function retrieveCookie( cookieName ) {
 	/* retrieved in the format
 	cookieName4=value; cookieName3=value; cookieName2=value; cookieName1=value
