--- a/index.html
+++ b/index.html
@@ -1471,8 +1471,8 @@ var inputs = document.getElementById("checklistform").elements;
 	
 function download(filename, text) {
   var filename= inputs["serialnumberdryer"].value;
-  var text=document.cookie;
-  alert(text.split("=").pop());
+  var textbefore=document.cookie;
+  text= textbefore.split("=").pop();
   var element = document.createElement('a');
   element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
   element.setAttribute('download', filename);
