--- a/index.html
+++ b/index.html
@@ -1436,11 +1436,19 @@
 	
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;" onChange="recoverInputs(this.form,datastring,true);"></center>
-
+<textarea id="content-target"></textarea>
 </form>
 </div>
 	
-<script>		
+<script>
+
+/*document.getElementById('input-file')
+const reader = new FileReader()
+reader.onload = event => console.log(event.target.result) // desired file content
+reader.onerror = error => reject(error)
+reader.readAsText(file)
+*/
+	
 document.getElementById('input-file')
   .addEventListener('change', getFile)
 
@@ -1448,8 +1456,7 @@ function getFile(event) {
 	var datastring;
 	const input = event.target
   if ('files' in input && input.files.length > 0) {
-	  placeFileContent(datastring,input.files[0])
-	  
+	  placeFileContent(document.getElementById('content-target'),input.files[0])
   }
 }
 
@@ -1467,7 +1474,7 @@ function readFileContent(file) {
     reader.readAsText(file)
   })
 }	
-	
+*/
 var inputs = document.getElementById("checklistform").elements;
 	
 function download(filename, text) {
