--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
 	
 <center>
-<input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;" onChange="recoverInputs(this.form,datastring,true);"></center>
+<input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
 </form>
 </div>
@@ -1474,7 +1474,7 @@ function readFileContent(file) {
     reader.readAsText(file)
   })
 }	
-*/
+
 var inputs = document.getElementById("checklistform").elements;
 	
 function download(filename, text) {
