--- a/index.html
+++ b/index.html
@@ -1475,7 +1475,7 @@ function readFileContent(file) {
     reader.readAsText(file)
   })
 }	
-var loadsaves= inputs["content-target"].value;
+var loadsaves= inputs['content-target'].value;
 var inputs = document.getElementById("checklistform").elements;
 	
 function download(filename, text) {
