--- a/index.html
+++ b/index.html
@@ -1438,11 +1438,12 @@
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
 <input type="button" value="load" onclick="recoverInputs(this.form,loadsaves,true);">
+loadsaves.valueOf();
 </form>
 </div>
 	
 <script>
-
+loadsaves.valueOf();
 /*document.getElementById('input-file')
 const reader = new FileReader()
 reader.onload = event => console.log(event.target.result) // desired file content
