--- a/index.html
+++ b/index.html
@@ -1437,13 +1437,12 @@
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
-<input type="button" value="load" onclick="recoverInputs(this.form,loadsaves,true);">
-loadsaves.valueOf();
+<input type="button" value="load" onclick="recoverInputs(this.form,%2C2021000%2Cad%2Cddd%2C%2C%2C,true);">
+
 </form>
 </div>
 	
 <script>
-loadsaves.valueOf();
 /*document.getElementById('input-file')
 const reader = new FileReader()
 reader.onload = event => console.log(event.target.result) // desired file content
