--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
 <input type="button" value="load" onclick="recoverInputs(this.form,loadsaves,true);">
-showcookie();
+<input type="button" value="showcookie" onclick="showcookie();">
 </form>
 </div>
 	
