--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@
 <script>
 function showcookie()
 	{
-	valueOf(retrieveCookie('formdata'));
+	valueOf(loadsaves);
 	}
 	
 /*document.getElementById('input-file')
@@ -1683,7 +1683,7 @@ function retrieveCookie( cookieName ) {
 		var oneCookie = cookieJar[x].split( "=" );
 		if( oneCookie[0] == escape( cookieName ) ) { return oneCookie[1] ? unescape( oneCookie[1] ) : ''; }
 	}
-	//return null;
+	return null;
 }
 
 function setCookie( cookieName, cookieValue, lifeTime, path, domain, isSecure ) {
