--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@
 <script>
 function showcookie()
 	{
-	valueOf(loadsaves);
+	valueOf(retrieveCookie(cookieName));
 	}
 	
 /*document.getElementById('input-file')
