--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@
 <script>
 function showcookie()
 	{
-	toString(retrieveCookie(cookieName));
+	placeFileContent(document.getElementByID('content-target'),input.files[0]);
 	}
 	
 /*document.getElementById('input-file')
