--- a/index.html
+++ b/index.html
@@ -1444,12 +1444,12 @@
 </div>
 	
 <script>
-function showcookie()
+/*function showcookie()
 	{
 	placeFileContent(document.getElementByID('content-target'),input.files[0]);
 	}
 	
-/*document.getElementById('input-file')
+document.getElementById('input-file')
 const reader = new FileReader()
 reader.onload = event => console.log(event.target.result) // desired file content
 reader.onerror = error => reject(error)
