--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,10 @@ reader.onerror = error => reject(error)
 reader.readAsText(file)
 */
 function placestringtext(file){
-	readFileContent(file);
+	const reader = new FileReader()
+	reader.onload = event => console.log(event.target.result) // desired file content
+	reader.onerror = error => reject(error)
+	reader.readAsText(file)
 }
 	
 document.getElementById('input-file')
