--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
 <textarea id="content-target"></textarea>
 <input type="button" value="load" onclick="recoverInputs(this.form,placestringtext(),true);">
 <input type="button" value="teststrintext" onclick="placestringtext()">
-placestringtext()
+placestringtext().value
 </form>
 </div>
 	
