--- a/index.html
+++ b/index.html
@@ -1437,7 +1437,7 @@
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <!--<textarea id="content-target"></textarea>-->
-<input type="button" value="load" onclick="recoverInputs(this.form,placestringtext(),true);">
+<input type="button" value="load" onclick="recoverInputs(this.form,stringfortest,true);">
 <input type="button" value="teststrintext" onclick="placestringtext()">
 	<p value="placefilecontent()"></p>
 	
@@ -1445,6 +1445,7 @@
 </div>
 	
 <script>
+var stringfortest="%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C";
 /*document.getElementById('input-file')
 const reader = new FileReader()
 reader.onload = event => console.log(event.target.result) // desired file content
