--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,9 @@
 <center><input type="file" id="flup" onchange="getfolder(event)" webkitdirectory mozdirectory msdirectory odirectory directory multiple /
 </center>
 -->
-	
+<script>
+	var stringfortest="%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C";
+	</script>
 
 <center>
 <input type="reset"  class="button-cookie" style="width:32.3%" name="g">
@@ -1438,14 +1440,14 @@
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <!--<textarea id="content-target"></textarea>-->
 <input type="button" value="load" onclick="recoverInputs(this.form,stringfortest,true);">
-<input type="button" value="teststrintext" onclick="placestringtext()">
-	<p value="placefilecontent()"></p>
+
+	
 	
 </form>
 </div>
 	
 <script>
-var stringfortest="%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C";
+
 /*document.getElementById('input-file')
 const reader = new FileReader()
 reader.onload = event => console.log(event.target.result) // desired file content
