--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@
 </center>
 -->
 <script>
-	var stringfortest="%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Cadasd%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C3424%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2Cwe%2C%2C%2C1%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C1%2C1%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2Cqweqe%2Cweqee%2Casdsad%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2Cwqee%2C1%2Ceqweqe%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2Cqweqwe%2C%2C1%2C%2C%2C1%2Casdasd%2C%2C1%2C%2C%2C1%2C%2C%2C1%2Casdad%2C%2Cherllo%20test%2Csggdsgsdg%2C";
+	var stringfortest="2021-06-09%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Cadasd%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C3424%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2Cwe%2C%2C%2C1%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C1%2C1%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2Cqweqe%2Cweqee%2Casdsad%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2Cwqee%2C1%2Ceqweqe%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2Cqweqwe%2C%2C1%2C%2C%2C1%2Casdasd%2C%2C1%2C%2C%2C1%2C%2C%2C1%2Casdad%2C%2Cherllo%20test%2Csggdsgsdg%2C";
 	</script>
 
 <center>
@@ -1439,7 +1439,7 @@
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <!--<textarea id="content-target"></textarea>-->
-<input type="button" value="load" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
+<input type="button" value="load" onclick="recoverInputs(this.form,'stringfortest',true);">
 
 	
 	
