--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <form method="get" id="checklistform" action="j-cropsey.github.io" onsubmit="return false;">
 
-<p><label for="date">Date:</label>
-<input type="date" id="date" name="date" size="20%"></p>
+<!--<p><label for="date">Date:</label>
+<input type="date" id="date" name="date" size="20%"></p>-->
 <p><label for="serialnumber">Serial Number: </label>
 <input type="text" id="serialnumber" name="serialnumberdryer" maxlength="7" size="13%" placeholder="2021###"></p>
 <p><label for=:modelnumber">Model Number:</label>
@@ -1426,7 +1426,7 @@
 </center>
 -->
 <script>
-	var stringfortest="2021-06-09%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Cadasd%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C3424%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2Cwe%2C%2C%2C1%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C1%2C1%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2Cqweqe%2Cweqee%2Casdsad%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2Cwqee%2C1%2Ceqweqe%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2Cqweqwe%2C%2C1%2C%2C%2C1%2Casdasd%2C%2C1%2C%2C%2C1%2C%2C%2C1%2Casdad%2C%2Cherllo%20test%2Csggdsgsdg%2C";
+	var stringfortest="%2C2021222%2Cad%2Cddd%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Cadasd%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C3424%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2Cwe%2C%2C%2C1%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C1%2C1%2C1%2C1%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C1%2C%2C1%2Cqweqe%2Cweqee%2Casdsad%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2Cwqee%2C1%2Ceqweqe%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C%2C1%2Cqweqwe%2C%2C1%2C%2C%2C1%2Casdasd%2C%2C1%2C%2C%2C1%2C%2C%2C1%2Casdad%2C%2Cherllo%20test%2Csggdsgsdg%2C";
 	</script>
 
 <center>
