--- a/index.html
+++ b/index.html
@@ -1426,8 +1426,9 @@
 </center>
 -->
 <script>
-	var stringfortest="2025555%2Ce599%2Ccustom%2C4%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C23%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2Csdf%2Cdff%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2Csdfsf%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Cfdsfdsf%2C%2C%2C%2C%2C%2Csfds%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2Csfsdf%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Csddsfdfdffff%2C%2C%2C";
-	</script>
+	//var stringfortest="2025555%2Ce599%2Ccustom%2C4%2C%2C%2C%2C1%2C%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C23%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2Csdf%2Cdff%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2C1%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C1%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C1%2C%2C%2C%2Csdfsf%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Cfdsfdsf%2C%2C%2C%2C%2C%2Csfds%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C1%2C%2C%2C%2Csfsdf%2C%2C%2C%2C%2C1%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2C%2Csddsfdfdffff%2C%2C%2C";
+	var stringfortest = 'formdata';
+</script>
 
 <center>
 <input type="reset"  class="button-cookie" style="width:32.3%" name="g">
@@ -1439,7 +1440,7 @@
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
-<input type="button" value="load" onclick="recoverInputs(this.form,retrieveCookie('formdata'),true);">
+<input type="button" value="load" onclick="recoverInputs(this.form,retrieveCookie('stringfortest'),true);">
 
 	
 	
