--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <form method="get" id="checklistform" action="j-cropsey.github.io" onsubmit="return false;">
 
-<!--<p><label for="date">Date:</label>
-<input type="date" id="date" name="date" size="20%"></p>-->
+<p><label for="date">Date:</label>
+<input type="date" id="date" name="date" size="20%"></p>
 <p><label for="serialnumber">Serial Number: </label>
 <input type="text" id="serialnumber" name="serialnumberdryer" maxlength="7" size="13%" placeholder="2021###"></p>
 <p><label for=:modelnumber">Model Number:</label>
@@ -119,7 +119,7 @@
 
 
 <hr>
-<b> Walk Around Inspection  </b>
+	<p1><b> Walk Around Inspection  </b></p1>
 <hr>
 
 
@@ -1602,6 +1602,8 @@ h1 {
  color: rgba(21,84,131,1);
  font-size: 240%;
 }
+	
+p1 { page-break-before :right }	
 
 b {
  font-weight:bolder;
