--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 <hr>
-	<p1><b> Walk Around Inspection  </b></p1>
+	<b> Walk Around Inspection  </b>
 <hr>
 
 
@@ -1603,7 +1603,7 @@ h1 {
  font-size: 240%;
 }
 	
-p1 { page-break-before :right }	
+hr { page-break-before :right }	
 
 b {
  font-weight:bolder;
