--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 <hr>
-	<b> Walk Around Inspection  </b>
+	<h2><b> Walk Around Inspection  </b><h2>
 <hr>
 
 
@@ -1603,7 +1603,7 @@ h1 {
  font-size: 240%;
 }
 	
-hr { page-break-before :right }	
+h2 { page-break-before :right }	
 
 b {
  font-weight:bolder;
