--- a/index.html
+++ b/index.html
@@ -1603,7 +1603,9 @@ h1 {
  font-size: 240%;
 }
 	
-h2 { page-break-before :right }	
+h2 { page-break-before :right;
+     font-size: 100%
+   }	
 
 b {
  font-weight:bolder;
