--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
 <input type="checkbox" id="nodbc2" name="nodbc2" value="nodbc2">
 <label for="nodbc2"> No</label></div>
 
-
+<h2>
 <hr>
-	<h2><b> Walk Around Inspection  </b></h2>
+<b> Walk Around Inspection  </b>
 <hr>
-
-
+</h2>
+	
 <div style="float:left"> Dryer Constructed Correctly:</div>
 <div style="margin-left: 39%"> 
 <input type="checkbox" id="yeswai1" name="yeswai1" value="yeswai1">
