--- a/index.html
+++ b/index.html
@@ -1413,8 +1413,7 @@
 </center>
 -->
 <script>
-	var stringfortest="cookieName4=value; cookieName3=value; cookieName2=value; cookieName1=value";
-	//var stringfortest = document.getElementById('formdata').value;
+	var stringfortest = document.getElementById('formdata').value;
 </script>
 
 <center>
