--- a/index.html
+++ b/index.html
@@ -1428,9 +1428,7 @@
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
 <input type="button" value="load" onclick="recoverInputs(this.form,retrieveCookie('stringfortest'),true);">
-
-	
-	
+<input type="button value="load" onclick="console.log('formdata');">
 </form>
 </div>
 	
