--- a/index.html
+++ b/index.html
@@ -1477,14 +1477,16 @@ function readFileContent(file) {
 }	
 var inputs = document.getElementById("checklistform").elements;
 	
-function download(filename, text) {
+var textdownload=retrieveCookie('formdata');	
+	
+function download(filename, textdownload) {
   var filename= inputs["serialnumberdryer"].value;
-	var text=retrieveCookie('formdata);
+	//var text=retrieveCookie('formdata);
 	//var text=document.cookie;
  // var textbefore=document.cookie;
   //text= textbefore.split("=").pop();
   var element = document.createElement('a');
-  element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+  element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(textdownload));
   element.setAttribute('download', filename);
   
   element.style.display = 'none';
