--- a/index.html
+++ b/index.html
@@ -1486,9 +1486,8 @@ function download(filename, textdownload) {
  // var textbefore=document.cookie;
   //text= textbefore.split("=").pop();
   var element = document.createElement('a');
- // element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(textdownload));
- element.setAttribute('href',textdownload);
-element.setAttribute('download', filename);
+ element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(textdownload));
+ element.setAttribute('download', filename);
   
   element.style.display = 'none';
   document.body.appendChild(element);
