--- a/index.html
+++ b/index.html
@@ -1427,7 +1427,7 @@
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
-<input type="button" value="load" onclick="recoverInputs(this.form,stringtyped,true);">
+<input type="button" value="load" onclick="recoverInputs(this.form,textdownload,true);">
 <input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="load textdownload to console" onclick="console.log(textdownload);">
 </form>
