--- a/index.html
+++ b/index.html
@@ -1425,7 +1425,7 @@
 <center><input type="button" class="button-cookie" style="width:97.5%" value="Complete and Save" onclick="download();"></center>
 	
 <center>
-<input type="file" id="input-file" class="btn-file-upload" value="Load Form" style="width:97.5%; margin-top:3px;"></center>
+<input type="file" id="input-file" class="btn-file-upload" value="Load From File" style="width:97.5%; margin-top:3px;"></center>
 <textarea id="content-target"></textarea>
 <input type="button" value="load" onclick="recoverInputs(this.form,textdownload,true);">
 <input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
@@ -1435,7 +1435,7 @@
 	
 <script>
 
-var stringtyped = ",e599,custom,4,,,,1,,1,1,,,,,,,,1,,1,,1,,,,,,,,,,,,1,,1,,,,,,,,1,,,1,,,1,,,,,,,,,,,,,,,,,,,,,,1,,,,1,,,1,,,,,,1,dff,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,1,,1,1,1,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,1,1,1,,,,,,,,,,,,,,,1,,1,,,,sdfsf,,,,,,,,,,,,,,,,fdsfdsf,,,,,,sfds,,,,,,,1,,,1,,,,,,,,,1,,,,1,,,,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,sddsfdfdffff,,,,";	
+//var stringtyped = ",e599,custom,4,,,,1,,1,1,,,,,,,,1,,1,,1,,,,,,,,,,,,1,,1,,,,,,,,1,,,1,,,1,,,,,,,,,,,,,,,,,,,,,,1,,,,1,,,1,,,,,,1,dff,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,1,,1,1,1,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,1,,,,1,,1,,1,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,1,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,1,1,1,,,,,,,,,,,,,,,1,,1,,,,sdfsf,,,,,,,,,,,,,,,,fdsfdsf,,,,,,sfds,,,,,,,1,,,1,,,,,,,,,1,,,,1,,,,,1,,,,,,,,,,,,,,,,,,,,,,,,,,,sddsfdfdffff,,,,";	
 	
 /*document.getElementById('input-file')
 const reader = new FileReader()
@@ -1486,7 +1486,7 @@ function download(filename, textdownload) {
  // var textbefore=document.cookie;
   //text= textbefore.split("=").pop();
   var element = document.createElement('a');
- element.setAttribute('href', 'data:text/plain;charset=utf-8,' + textdownload);
+ element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIcomponent(textdownload));
  element.setAttribute('download', filename);
   
   element.style.display = 'none';
