--- a/index.html
+++ b/index.html
@@ -1426,7 +1426,7 @@
 	
 <center>
 <input type="file" id="input-file" class="btn-file-upload" value="Load From File" style="width:97.5%; margin-top:3px;"></center>
-<textarea id="content-target"></textarea>
+<!--<textarea id="content-target"></textarea>-->
 <input type="button" value="load" onclick="recoverInputs(this.form,textdownload,true);">
 <input type="button" value="load formdata to console" onclick="console.log(retrieveCookie('formdata'));">
 <input type="button" value="load cookiefromfile to console" onclick="console.log(cookiefromfile);">
